@@ -51,6 +51,7 @@ DESCRIPTIONS</A>
 		<LI><A HREF="#destroyimageinfo">DestroyImageInfo</A>
 		<LI><A HREF="#displayimages">DisplayImages</A>
 		<LI><A HREF="#getimagechanneldepth">GetImageChannelDepth</A>
+		<LI><A HREF="#getimageclipmask">GetImageClipMask</A>
 		<LI><A HREF="#getimagedepth">GetImageDepth</A>
 		<LI><A HREF="#getimageexception">GetImageException</A>
 		<LI><A HREF="#getimagegeometry">GetImageGeometry</A>
@@ -107,6 +108,7 @@ FILE *file, const unsigned int verbose );</P>
 <P>void  <STRONG>DestroyImageInfo</STRONG>( ImageInfo *image_info );</P>
 <P>unsigned int  <STRONG>DisplayImages</STRONG>( const ImageInfo *image_info, Image *image );</P>
 <P>unsigned long  <STRONG>GetImageChannelDepth</STRONG>( const Image *image, const ChannelType channel, ExceptionInfo *exception );</P>
+<P>Image * <STRONG>GetImageClipMask</STRONG>( const Image *image, ExceptionInfo *exception );</P>
 <P>unsigned long  <STRONG>GetImageDepth</STRONG>( const Image *image, ExceptionInfo *exception );</P>
 <P>void  <STRONG>GetImageException</STRONG>( Image *image, ExceptionInfo *exception );</P>
 <P>int  <STRONG>GetImageGeometry</STRONG>( const Image *image, const char *geometry, const unsigned int size_to_fit, RectangleInfo *region_info );</P>
@@ -123,7 +125,7 @@ FILE *file, const unsigned int verbose );</P>
 <P>Image * <STRONG>ReferenceImage</STRONG>( Image *image );</P>
 <P>void  <STRONG>RemoveDefinitions</STRONG>( ImageInfo *image_info, const char *options );</P>
 <P>void  <STRONG>SetImage</STRONG>( Image *image, const Quantum opacity );</P>
-<P>unsigned int  <STRONG>SetImageClipMask</STRONG>( Image *image, Image *clip_mask );</P>
+<P>unsigned int  <STRONG>SetImageClipMask</STRONG>( Image *image, const Image *clip_mask );</P>
 <P>unsigned int  <STRONG>SetImageDepth</STRONG>( Image *image, const unsigned long depth );</P>
 <P>void  <STRONG>SetImageOpacity</STRONG>( Image *image, const unsigned int opacity );</P>
 <P><STRONG>SetImageType</STRONG>( Image *image, const ImageType image_type );</P>
@@ -428,6 +430,24 @@ Channel to test.
 <DD><P></P><DT><STRONG>exception:</STRONG><BR>
 <DD>
 Return any errors or warnings in this structure.
+<P></P></DL></DL>
+<P>
+<H3><A NAME="getimageclipmask">GetImageClipMask</A></H3>
+<P>GetImageClipMask returns a reference-counted copy of the current image clip mask.  This copy must be deallocated using <CODE>DestroyImage()</CODE> once it is no longer needed.  If the image does not have an associated clip mask, then 
+NULL is returned.  Use <CODE>SetImageClipMask()</CODE> to add a clip mask to an image, or remove a clip mask.</P>
+<P>If a component of the clip mask is set to TransparentOpacity (maximum value) then the corresponding image pixel component will not be updated when <CODE>SyncImagePixels()</CODE> is applied.  The clip mask may be used to constrain the results of an image processing operation to a region of the image.  Regions outside those allowed by the clip mask may be processed, but only pixel quantums allowed by the clip mask will actually be updated.</P>
+<P>The clip mask protects the DirectClass pixels and PseudoClass pixel indexes from modification.  The clip mask does *not* protect the image colormap since the image colormap is globally shared by all pixels in a PseudoClass image.</P>
+<P>The format of the GetImageClipMask method is</P>
+<blockquote><A HREF="types.html#Image">Image</A> *GetImageClipMask ( const <A HREF="types.html#Image">Image</A> *image, <A HREF="types.html#ExceptionInfo">ExceptionInfo</A> *exception ); </blockquote><P>
+A descripton of each parameter follows:</P>
+<DL><DT><DD><DL>
+<DD><P></P><DT><STRONG>image:</STRONG><BR>
+<DD>
+The image.
+<P></P>
+<DD><P></P><DT><STRONG>exception:</STRONG><BR>
+<DD>
+Reason for failure.
 <P></P></DL></DL>
 <P>
 <H3><A NAME="getimagedepth">GetImageDepth</A></H3>
@@ -751,8 +771,10 @@ Desired channel depth (range 1 to QuantumDepth)
 <P></P></DL></DL>
 <P>
 <H3><A NAME="setimageclipmask">SetImageClipMask</A></H3>
-<blockquote>SetImageClipMask() associates a clip mask with the image. The clip mask must be the same dimensions as the image. Set any pixel component of the clip mask to TransparentOpacity to prevent that corresponding image pixel component from being updated when SyncImagePixels ( ) is applied. </blockquote><P>The format of the SetImageClipMask method is:</P>
-<blockquote>unsigned int SetImageClipMask ( <A HREF="types.html#Image">Image</A> *image, <A HREF="types.html#Image">Image</A> *clip_mask ); </blockquote><P>
+<blockquote>SetImageClipMask() associates a clip mask with the image. The clip mask must be the same dimensions as the image. </blockquote><P>If a component of the clip mask is set to TransparentOpacity (maximum value) then the corresponding image pixel component will not be updated when <CODE>SyncImagePixels()</CODE> is applied.  The clip mask may be used to constrain the results of an image processing operation to a region of the image.  Regions outside those allowed by the clip mask may be processed, but only pixel quantums allowed by the clip mask will actually be updated.</P>
+<P>The clip mask protects the DirectClass pixels and PseudoClass pixel indexes from modification.  The clip mask does *not* protect the image colormap since the image colormap is globally shared by all pixels in a PseudoClass image.</P>
+<P>The format of the SetImageClipMask method is:</P>
+<blockquote>unsigned int SetImageClipMask ( <A HREF="types.html#Image">Image</A> *image, const <A HREF="types.html#Image">Image</A> *clip_mask ); </blockquote><P>
 A description of each parameter follows:</P>
 <DL><DT><DD><DL>
 <DD><P></P><DT><STRONG>image:</STRONG><BR>
