@@ -1,9 +1,11 @@
 2004-05-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* magick/compress.c (HuffmanDecodeImage): Properly return error status.
+	(HuffmanEncode2Image): Properly return error status.
+	* magick/composite.c (CompositeImage): Properly return error status.
 	* magick/quantize.c (ClassifyImageColors): Properly return error status.
 	(GetImageQuantizeError): Properly return error status.
 	(OrderedDitherImage): Properly return error status.
-
 	* magick/profile.c (ProfileImage): Properly return error status.
 	* magick/paint.c (ColorFloodfillImage): Properly return error status.
 	(MatteFloodfillImage): Properly return error status.
